tests/ui/stability-attribute/generics-default-stability-where.stderr
error[E0658]: use of unstable library feature `unstable_default`
  --> $DIR/generics-default-stability-where.rs:7:45
   |
LL | impl<T> Trait3<usize> for T where T: Trait2<usize> {
   |                                             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0210]: type parameter `T` must be used as the type parameter for some local type (e.g., `MyStruct<T>`)
  --> $DIR/generics-default-stability-where.rs:7:6
   |
LL | impl<T> Trait3<usize> for T where T: Trait2<usize> {
   |      ^ type parameter `T` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0210, E0658.
For more information about an error, try `rustc --explain E0210`.
